package model;

public enum Especie {
    GATO,
    CACHORRO,
    PAPAGAIO,
    TATU,
    COBRA,
}
